Bug 359905 - Crash when generating documentation for unknown module
Summary: Crash when generating documentation for unknown module
Status: RESOLVED FIXED
Alias: None
Product: kdev-python
Classification: Developer tools
Component: general (other bugs)
Version First Reported In: frameworks
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: 1.7.3
Assignee: Sven Brauch
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-28 22:00 UTC by Nicolás Alvarez
Modified: 2016-03-05 14:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolás Alvarez 2016-02-28 22:00:35 UTC
I opened a .py file which has 'import requests', 'requests' was underlined in red. I moved the mouse over 'requests', and selected Solve -> Generate documentation in the tooltip. Then in the dialog I clicked Generate, then Save and Close, at which point KDevelop crashed:

Thread 1 (Thread 0x7feeaea6a940 (LWP 11407)):
[KCrash Handler]
#6  0x00007feec4a62f3e in QObjectPrivate::isSignalConnected (signal_index=3, this=0x4) at kernel/qobject_p.h:250
#7  QMetaObject::activate (sender=0x4abc3c0, signalOffset=<optimized out>, local_signal_index=<optimized out>, argv=0x7ffe6c2efc20) at kernel/qobject.cpp:3588
#8  0x00007feec8ce5c3c in KDevelop::IAssistantAction::executed(KDevelop::IAssistantAction*) () from /home/nicolas/local/lib/x86_64-linux-gnu/libKDevPlatformInterfaces.so.10
#9  0x00007fee91807326 in Python::DocumentationGeneratorAction::execute() () from /home/nicolas/local/lib/x86_64-linux-gnu/libkdevpythonduchain.so
#10 0x00007feec8cd5723 in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (KDevelop::IAssistantAction::*)()>::call(void (KDevelop::IAssistantAction::*)(), KDevelop::IAssistantAction*, void**) () from /home/nicolas/local/lib/x86_64-linux-gnu/libKDevPlatformInterfaces.so.10
#11 0x00007feec8cd5690 in void QtPrivate::FunctionPointer<void (KDevelop::IAssistantAction::*)()>::call<QtPrivate::List<>, void>(void (KDevelop::IAssistantAction::*)(), KDevelop::IAssistantAction*, void**) () from /home/nicolas/local/lib/x86_64-linux-gnu/libKDevPlatformInterfaces.so.10
#12 0x00007feec8cd54f8 in QtPrivate::QSlotObject<void (KDevelop::IAssistantAction::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) () from /home/nicolas/local/lib/x86_64-linux-gnu/libKDevPlatformInterfaces.so.10
#13 0x00007feec4a63537 in QtPrivate::QSlotObjectBase::call (a=0x7ffe6c2effe0, r=0x4abc3c0, this=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobject_impl.h:124
#14 QMetaObject::activate (sender=sender@entry=0x4ab7330, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7ffe6c2effe0) at kernel/qobject.cpp:3698
#15 0x00007feec4a63ea7 in QMetaObject::activate (sender=sender@entry=0x4ab7330, m=m@entry=0x7feec582af00 <QAction::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7ffe6c2effe0) at kernel/qobject.cpp:3578
#16 0x00007feec531e3b2 in QAction::triggered (this=this@entry=0x4ab7330, _t1=false) at .moc/moc_qaction.cpp:365
#17 0x00007feec5320838 in QAction::activate (this=0x4ab7330, event=<optimized out>) at kernel/qaction.cpp:1162
#18 0x00007feec54a3202 in QMenuPrivate::activateCausedStack (this=this@entry=0x4a1e570, causedStack=..., action=action@entry=0x4ab7330, action_e=action_e@entry=QAction::Trigger, self=self@entry=true) at widgets/qmenu.cpp:1130
#19 0x00007feec54a94ac in QMenuPrivate::activateAction (this=this@entry=0x4a1e570, action=action@entry=0x4ab7330, action_e=action_e@entry=QAction::Trigger, self=self@entry=true) at widgets/qmenu.cpp:1207
#20 0x00007feec54ad420 in QMenu::mouseReleaseEvent (this=<optimized out>, e=0x7ffe6c2f0620) at widgets/qmenu.cpp:2540
#21 0x00007feec536afe8 in QWidget::event (this=this@entry=0x449f750, event=event@entry=0x7ffe6c2f0620) at kernel/qwidget.cpp:9044
#22 0x00007feec54ade63 in QMenu::event (this=0x449f750, e=0x7ffe6c2f0620) at widgets/qmenu.cpp:2654
#23 0x00007feec5327ffc in QApplicationPrivate::notify_helper (this=this@entry=0x110d920, receiver=receiver@entry=0x449f750, e=e@entry=0x7ffe6c2f0620) at kernel/qapplication.cpp:3716
#24 0x00007feec532dbc9 in QApplication::notify (this=<optimized out>, receiver=0x449f750, e=0x7ffe6c2f0620) at kernel/qapplication.cpp:3276
#25 0x00007feec4a34b5b in QCoreApplication::notifyInternal (this=0x7ffe6c2f2e78, receiver=receiver@entry=0x449f750, event=event@entry=0x7ffe6c2f0620) at kernel/qcoreapplication.cpp:965
#26 0x00007feec532cad2 in QCoreApplication::sendSpontaneousEvent (event=0x7ffe6c2f0620, receiver=0x449f750) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:227
#27 QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0x449f750, event=event@entry=0x7ffe6c2f0620, alienWidget=alienWidget@entry=0x0, nativeWidget=0x449f750, buttonDown=buttonDown@entry=0x7feec5859b20 <qt_button_down>, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:2770
#28 0x00007feec538594d in QWidgetWindow::handleMouseEvent (this=this@entry=0x4da6600, event=event@entry=0x7ffe6c2f0a30) at kernel/qwidgetwindow.cpp:452
#29 0x00007feec5387bab in QWidgetWindow::event (this=0x4da6600, event=0x7ffe6c2f0a30) at kernel/qwidgetwindow.cpp:210
#30 0x00007feec5327ffc in QApplicationPrivate::notify_helper (this=this@entry=0x110d920, receiver=receiver@entry=0x4da6600, e=e@entry=0x7ffe6c2f0a30) at kernel/qapplication.cpp:3716
#31 0x00007feec532d4c6 in QApplication::notify (this=0x7ffe6c2f2e78, receiver=0x4da6600, e=0x7ffe6c2f0a30) at kernel/qapplication.cpp:3499
#32 0x00007feec4a34b5b in QCoreApplication::notifyInternal (this=0x7ffe6c2f2e78, receiver=receiver@entry=0x4da6600, event=event@entry=0x7ffe6c2f0a30) at kernel/qcoreapplication.cpp:965
#33 0x00007feec4d77201 in QCoreApplication::sendSpontaneousEvent (event=0x7ffe6c2f0a30, receiver=0x4da6600) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:227
#34 QGuiApplicationPrivate::processMouseEvent (e=0x4c2fde0) at kernel/qguiapplication.cpp:1789
#35 0x00007feec4d78ec5 in QGuiApplicationPrivate::processWindowSystemEvent (e=e@entry=0x4c2fde0) at kernel/qguiapplication.cpp:1581
#36 0x00007feec4d5ce38 in QWindowSystemInterface::sendWindowSystemEvents (flags=...) at kernel/qwindowsysteminterface.cpp:625
#37 0x00007feeae9d6ff0 in userEventSourceDispatch (source=<optimized out>) at eventdispatchers/qeventdispatcher_glib.cpp:70
#38 0x00007feebb6c0fd7 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#39 0x00007feebb6c1230 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#40 0x00007feebb6c12dc in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#41 0x00007feec4a8b2bf in QEventDispatcherGlib::processEvents (this=0x113a7d0, flags=...) at kernel/qeventdispatcher_glib.cpp:418
#42 0x00007feec4a322ea in QEventLoop::exec (this=this@entry=0x7ffe6c2f0db0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#43 0x00007feec54a81f0 in QMenu::exec (this=<optimized out>, p=..., action=action@entry=0x0) at widgets/qmenu.cpp:2307
#44 0x00007feec54b88f4 in QPushButtonPrivate::_q_popupPressed (this=0x4e830b0) at widgets/qpushbutton.cpp:582
#45 0x00007feec4a636aa in QMetaObject::activate (sender=sender@entry=0x4f06d70, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x0) at kernel/qobject.cpp:3713
#46 0x00007feec4a63ea7 in QMetaObject::activate (sender=sender@entry=0x4f06d70, m=m@entry=0x7feec584aa40 <QAbstractButton::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x0) at kernel/qobject.cpp:3578
#47 0x00007feec56c2830 in QAbstractButton::pressed (this=this@entry=0x4f06d70) at .moc/moc_qabstractbutton.cpp:290
#48 0x00007feec5425267 in QAbstractButtonPrivate::emitPressed (this=0x4e830b0) at widgets/qabstractbutton.cpp:548
#49 0x00007feec54253c1 in QAbstractButton::mousePressEvent (this=0x4f06d70, e=0x7ffe6c2f13d0) at widgets/qabstractbutton.cpp:1105
#50 0x00007feec536b42f in QWidget::event (this=0x4f06d70, event=0x7ffe6c2f13d0) at kernel/qwidget.cpp:8674
#51 0x00007feec5327ffc in QApplicationPrivate::notify_helper (this=this@entry=0x110d920, receiver=receiver@entry=0x4f06d70, e=e@entry=0x7ffe6c2f13d0) at kernel/qapplication.cpp:3716
#52 0x00007feec532dbc9 in QApplication::notify (this=<optimized out>, receiver=0x4f06d70, e=0x7ffe6c2f13d0) at kernel/qapplication.cpp:3276
#53 0x00007feec4a34b5b in QCoreApplication::notifyInternal (this=0x7ffe6c2f2e78, receiver=receiver@entry=0x4f06d70, event=event@entry=0x7ffe6c2f13d0) at kernel/qcoreapplication.cpp:965
#54 0x00007feec532cad2 in QCoreApplication::sendSpontaneousEvent (event=0x7ffe6c2f13d0, receiver=0x4f06d70) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:227
#55 QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0x4f06d70, event=event@entry=0x7ffe6c2f13d0, alienWidget=alienWidget@entry=0x4f06d70, nativeWidget=0x449da20, buttonDown=buttonDown@entry=0x7feec5859b20 <qt_button_down>, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:2770
#56 0x00007feec53855eb in QWidgetWindow::handleMouseEvent (this=this@entry=0x4c2f760, event=event@entry=0x7ffe6c2f17e0) at kernel/qwidgetwindow.cpp:555
#57 0x00007feec5387bab in QWidgetWindow::event (this=0x4c2f760, event=0x7ffe6c2f17e0) at kernel/qwidgetwindow.cpp:210
#58 0x00007feec5327ffc in QApplicationPrivate::notify_helper (this=this@entry=0x110d920, receiver=receiver@entry=0x4c2f760, e=e@entry=0x7ffe6c2f17e0) at kernel/qapplication.cpp:3716
#59 0x00007feec532d4c6 in QApplication::notify (this=0x7ffe6c2f2e78, receiver=0x4c2f760, e=0x7ffe6c2f17e0) at kernel/qapplication.cpp:3499
#60 0x00007feec4a34b5b in QCoreApplication::notifyInternal (this=0x7ffe6c2f2e78, receiver=receiver@entry=0x4c2f760, event=event@entry=0x7ffe6c2f17e0) at kernel/qcoreapplication.cpp:965
#61 0x00007feec4d77201 in QCoreApplication::sendSpontaneousEvent (event=0x7ffe6c2f17e0, receiver=0x4c2f760) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:227
#62 QGuiApplicationPrivate::processMouseEvent (e=0x4da5020) at kernel/qguiapplication.cpp:1789
#63 0x00007feec4d78ec5 in QGuiApplicationPrivate::processWindowSystemEvent (e=e@entry=0x4da5020) at kernel/qguiapplication.cpp:1581
#64 0x00007feec4d5ce38 in QWindowSystemInterface::sendWindowSystemEvents (flags=...) at kernel/qwindowsysteminterface.cpp:625
#65 0x00007feeae9d6ff0 in userEventSourceDispatch (source=<optimized out>) at eventdispatchers/qeventdispatcher_glib.cpp:70
#66 0x00007feebb6c0fd7 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#67 0x00007feebb6c1230 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#68 0x00007feebb6c12dc in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#69 0x00007feec4a8b2bf in QEventDispatcherGlib::processEvents (this=0x113a7d0, flags=...) at kernel/qeventdispatcher_glib.cpp:418
#70 0x00007feec4a322ea in QEventLoop::exec (this=this@entry=0x7ffe6c2f1b60, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#71 0x00007feec4a3a3cc in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1229
#72 0x00000000004181d8 in main ()


In addition, the following directories and files were created:

/home/nicolas/file:/
/home/nicolas/file:/home/
/home/nicolas/file:/home/nicolas/
/home/nicolas/file:/home/nicolas/.local/
/home/nicolas/file:/home/nicolas/.local/share/
/home/nicolas/file:/home/nicolas/.local/share/kdevpythonsupport/
/home/nicolas/file:/home/nicolas/.local/share/kdevpythonsupport/documentation_files/
/home/nicolas/file:/home/nicolas/.local/share/kdevpythonsupport/documentation_files/file:/
/home/nicolas/file:/home/nicolas/.local/share/kdevpythonsupport/documentation_files/file:/home/
/home/nicolas/file:/home/nicolas/.local/share/kdevpythonsupport/documentation_files/file:/home/nicolas/
/home/nicolas/file:/home/nicolas/.local/share/kdevpythonsupport/documentation_files/file:/home/nicolas/.local/
/home/nicolas/file:/home/nicolas/.local/share/kdevpythonsupport/documentation_files/file:/home/nicolas/.local/share/
/home/nicolas/file:/home/nicolas/.local/share/kdevpythonsupport/documentation_files/file:/home/nicolas/.local/share/kdevpythonsupport/
/home/nicolas/file:/home/nicolas/.local/share/kdevpythonsupport/documentation_files/file:/home/nicolas/.local/share/kdevpythonsupport/documentation_files/
/home/nicolas/.local/share/kdevpythonsupport/
/home/nicolas/.local/share/kdevpythonsupport/documentation_files/
/home/nicolas/.local/share/kdevpythonsupport/documentation_files/requests.py
Comment 1 Sven Brauch 2016-03-05 14:25:57 UTC
Git commit 6023a85b30ad419cf37559cbaa47a82ef8ef6e66 by Sven Brauch.
Committed on 05/03/2016 at 14:25.
Pushed by brauch into branch 'master'.

fix porting bug: path for docfile generator files

M  +7    -5    docfilekcm/docfilewizard.cpp

http://commits.kde.org/kdev-python/6023a85b30ad419cf37559cbaa47a82ef8ef6e66
Comment 2 Sven Brauch 2016-03-05 14:26:24 UTC
Git commit 1091b5a189ca7b1f920cad26633fdaf17fbed665 by Sven Brauch.
Committed on 05/03/2016 at 14:26.
Pushed by brauch into branch '5.0'.

fix porting bug: path for docfile generator files

M  +7    -5    docfilekcm/docfilewizard.cpp

http://commits.kde.org/kdev-python/1091b5a189ca7b1f920cad26633fdaf17fbed665