fix porting bug: path for docfile generator files

BUG:359905